--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ TYPE html>
 </head>
 <body>
     <div class="container">
-        <h1><img src="Screenshot 2025-08-30 at 10.43.27" alt="Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">Postcode Validator</h1>
+        <h1><img src="trinity-logo" alt="Logo" style="height: 40px; vertical-align: middle; margin-right: 10px;">Postcode Validator</h1>
         
         <div class="input-group">
             <label for="postcode">Enter Full Postcode:</label>
